
plugins {
    id "io.freefair.lombok" version "8.10.2"
    id 'java'
    id "maven-publish"
}

group = 'usdot.jpo.ode'
version = '2.0.0'



repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.16'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'commons-io:commons-io:2.20.0'
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/" + System.getenv("GITHUB_REPOSITORY_OWNER") + "/j2735-ffm-java")
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = project.name
            version = version
            from components.java
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

test {
    jvmArgs(["--enable-native-access=ALL-UNNAMED"])
    systemProperty("jextract.trace.downcalls", "true")
    useJUnitPlatform()
    testLogging.showStandardStreams = true
}

